updated folder structure

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<div class="footer" ng-include='"app/include/footer.html"'></div>
 	
 </body>
-<!-- <script src="node_modules/requirejs/require.js" data-main="app/main.js"></script> -->
-<script src="node_modules/requirejs/require.js" data-main="app/dist/angular_amd-seed.min.js"></script>
+<script src="node_modules/requirejs/require.js" data-main="./app/js/main.js"></script>
+<!-- <script src="node_modules/requirejs/require.js" data-main="app/dist/angular_amd-seed.min.js"></script> -->
 </html>
